tests/error/errors_on_usage/match_type_change.err
Error: Different types (at $FILE:18:11)
   | 
16 |             result = True
17 | 
18 |     return result
   |            ^^^^^^ Variable `result` may refer to different types

Notes:
   | 
10 | def different_types(p: Point) -> int:
11 |     result = 0
   |     ------ This is of type `int`

15 |         case Point(_,_):
16 |             result = True
   |             ------ This is of type `bool`

Guppy compilation failed due to 1 previous error
